# django-migrations-tui

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish-to-pypi.yml  tests.yml
django_migrations_tui/management/commands/: migrationstui.py
django_migrations_tui/tui/: app.py  app.tcss  confirmation.py  logs.py  tree.py  utils.py
test_dj_project/: conftest.py  manage.py  test_app.py  test_app_actions.py  test_show_list.py  test_show_plan.py
test_dj_project/dj_project/: asgi.py  settings.py  urls.py  wsgi.py
