[metadata]
name = django-migrations-tui
version = 0.1.7
description = Manage Django Migrations with a Text-Based UI.
long_description = file: README.rst
url = https://github.com/taliraj/django-migrations-tui
author = Taulant Aliraj
author_email = taliraj@outlook.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django
    textual >= 0.37.0

[options.extras_require]
test =
     pytest
     pytest-django
     pytest-asyncio
